nav overlap solve

--- a/styles/new_style.css
+++ b/styles/new_style.css
@@ -57,7 +57,7 @@ img {
 @media screen and (max-width: 500px) {
   .navbar a {
     float: none;
-    display: block;
+    display: block-flex;
     width: 100%;
     text-align: center;
   }
